Resolved wave contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ main {
   font-size: large;
   display: inline-block;
   padding: 0.75rem 1.5rem;
-  background-color: #3b82f6;
+  background-color: #1e74ff;
   color: #fff;
   border-radius: 5px;
   text-decoration: none;
@@ -215,7 +215,7 @@ main {
 }
 
 .resume-btn:hover {
-  background-color: #2563eb;
+  background-color: #0051ff;
 }
 
 .btn {
